--- a/catalog-info-back.yaml
+++ b/catalog-info-back.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: Monofolio Back
+  name: Monofolio-Back
   description: Max's new portfolio
   tags:
   - portfolio
