--- a/catalog-info-front.yaml
+++ b/catalog-info-front.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: Monofolio Front
+  name: Monofolio-Front
   description: Max's new portfolio
   tags:
   - portfolio
