feat: package [HOOK FAIL OK]

--- a/catalog-info-back.yaml
+++ b/catalog-info-back.yaml
@@ -21,5 +21,7 @@ spec:
   lifecycle: production
   owner: WeeboDev
   system: infra
+  dependencyOf:
+  - Monofolio-Front
   providesApis:
   - folio-api
