--- a/catalog-info-back.yaml
+++ b/catalog-info-back.yaml
@@ -16,6 +16,7 @@ metadata:
     backstage.io/source-location: url:https://github.com/batleforc/Monofolio/blob/main/
     github.com/project-slug: batleforc/Monofolio
     backstage.io/spectral-ruleset-url: https://github.com/batleforc/Monofolio/blob/main/swagger.json
+    endoflife.date/products: rust@1.80
 spec:
   type: service
   lifecycle: production
