--- a/catalog-info-front.yaml
+++ b/catalog-info-front.yaml
@@ -12,11 +12,14 @@ metadata:
   - url: https://github.com/batleforc/Monofolio
     title: Repo
     icon: github
+  - url: https://che.weebo.fr#https://github.com/batleforc/Monofolio
+    title: Eclipse Che (VS Code)
+    icon: web
   annotations:
     backstage.io/managed-by-location: url:https://github.com/batleforc/Monofolio/blob/main/catalog-info-front.yaml
     backstage.io/source-location: url:https://github.com/batleforc/Monofolio/blob/main/
     github.com/project-slug: batleforc/Monofolio
-    endoflife.date/products: node@21
+    endoflife.date/products: nodejs@21
 spec:
   type: website
   lifecycle: production
