--- a/catalog-info-api.yaml
+++ b/catalog-info-api.yaml
@@ -3,6 +3,8 @@ kind: API
 metadata:
   name: folio-api
   description: Provide content of the portfolio
+  annotations:
+    backstage.io/spectral-ruleset-url: https://github.com/batleforc/Monofolio/blob/main/.spectral.yaml
 spec:
   type: openapi
   lifecycle: production
