--- a/.spectral.yaml
+++ b/.spectral.yaml
@@ -1,1 +1,6 @@
-extends: ["spectral:oas", "spectral:asyncapi", "@stoplight/spectral-documentation"]
+extends:
+  [
+    "spectral:oas",
+    "spectral:asyncapi",
+    "https://unpkg.com/@stoplight/spectral-documentation/dist/ruleset.mjs"
+  ]
