--- a/cicd/templates/push/triggerTemplatePush.yaml
+++ b/cicd/templates/push/triggerTemplatePush.yaml
@@ -26,7 +26,7 @@ spec:
           - pipelineTaskName: github-set-status
             metadata:
               annotations:
-                {{- with .Values.annotations.common }}
+                {{- with $.Values.annotations.common }}
                   {{- toYaml . | nindent 4 }}
                 {{- end }}
 
