--- a/cicd/templates/push/pipelinePush.yaml
+++ b/cicd/templates/push/pipelinePush.yaml
@@ -158,6 +158,8 @@ spec:
           value: success
         - name: TARGET_URL
           value: {{.Values.config.baseUrl}}/$(context.pipelineRun.name)
+        - name: GITHUB_KEY
+          value: {{ .Values.secretVault.github_key }}
     - name: github-status-finally-failed
       when:
         - input: $(tasks.status)
@@ -181,6 +183,8 @@ spec:
           value: failure
         - name: TARGET_URL
           value: {{.Values.config.baseUrl}}/$(context.pipelineRun.name)
+        - name: GITHUB_KEY
+          value: {{ .Values.secretVault.github_key }}
     - name: github-status-finally-error
       when:
         - input: $(tasks.status)
@@ -204,3 +208,5 @@ spec:
           value: error
         - name: TARGET_URL
           value: {{.Values.config.baseUrl}}/$(context.pipelineRun.name)
+        - name: GITHUB_KEY
+          value: {{ .Values.secretVault.github_key }}
