--- a/deploy/back/values.yaml
+++ b/deploy/back/values.yaml
@@ -10,7 +10,7 @@ image:
   repository: ""
   pullPolicy: Always
   tag: "main"
-  pullSecret: "harbor-pull"
+  pullSecret: "harbor-auth"
 
 labels:
   app.kubernetes.io/name: "monofolio-backend"
@@ -28,9 +28,7 @@ ingress:
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
   host: '{{- template "mychart.name" . }}.dev.mono-folio.com'
 
-
 env:
   OTEL_OTEL_EXPORTER_OTLP_ENDPOINT: http://tempo.monitoring.svc.cluster.local:4317
-
 
 envSecrets: []
