--- a/deploy/back/values.yaml
+++ b/deploy/back/values.yaml
@@ -24,8 +24,8 @@ annotations:
 
 ingress:
   annotations:
-    kubernetes.io/ingress.class: "haproxy"
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    kubernetes.io/ingress.class: "traefik"
+    cert-manager.io/cluster-issuer: "prod-letsencrypt-issuer"
   host: '{{- template "mychart.name" . }}.dev.mono-folio.com'
 
 env:
