feat: add janus idp

--- a/catalog-info-back.yaml
+++ b/catalog-info-back.yaml
@@ -21,6 +21,7 @@ metadata:
     backstage.io/spectral-ruleset-url: https://github.com/batleforc/Monofolio/blob/main/swagger.json
     endoflife.date/products: rust@1.80
     backstage.io/kubernetes-namespace: portfolio
+    janus-idp.io/tekton: monofolio
 spec:
   type: service
   lifecycle: production
