feat: WIP CI/CD

--- a/cicd/templates/eventListener.yaml
+++ b/cicd/templates/eventListener.yaml
@@ -2,6 +2,12 @@ apiVersion: triggers.tekton.dev/v1alpha1
 kind: EventListener
 metadata:
   name: {{.Values.prefix}}-event-listener
+  labels:
+    app.kubernetes.io/name: '{{.Values.prefix}}-webhook'
+    app.kubernetes.io/instance: '{{.Values.prefix}}-webhook-{{- template "mychart.name" . }}'
+    app.kubernetes.io/component: webhook
+    app.kubernetes.io/part-of: '{{.Values.prefix}}-{{- template "mychart.name" . }}'
+    backstage.io/kubernetes-id: '{{.Values.prefix}}'
 spec:
   serviceAccountName: {{.Values.prefix}}-sa
   resources:
