--- a/cicd/templates/ingress.yaml
+++ b/cicd/templates/ingress.yaml
@@ -7,6 +7,12 @@ metadata:
     haproxy-ingress.github.io/ssl-redirect: 'false'
     kubernetes.io/ingress.class: '{{.Values.config.ingressClass}}'
     cert-manager.io/cluster-issuer: 'prod-letsencrypt-issuer'
+  labels:
+    app.kubernetes.io/name: '{{.Values.prefix}}-webhook'
+    app.kubernetes.io/instance: '{{.Values.prefix}}-webhook-{{- template "mychart.name" . }}'
+    app.kubernetes.io/component: webhook
+    app.kubernetes.io/part-of: '{{.Values.prefix}}-{{- template "mychart.name" . }}'
+    backstage.io/kubernetes-id: '{{.Values.prefix}}'
 spec:
   tls:
     - hosts:
