--- a/cicd/templates/push/triggerBindingPush.yaml
+++ b/cicd/templates/push/triggerBindingPush.yaml
@@ -2,6 +2,12 @@ apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
   name: {{.Values.prefix}}-trigger-binding-push
+  labels:
+    app.kubernetes.io/name: '{{.Values.prefix}}-webhook'
+    app.kubernetes.io/instance: '{{.Values.prefix}}-webhook-{{- template "mychart.name" . }}'
+    app.kubernetes.io/component: webhook
+    app.kubernetes.io/part-of: '{{.Values.prefix}}-{{- template "mychart.name" . }}'
+    backstage.io/kubernetes-id: '{{.Values.prefix}}'
 spec:
   params:
     - name: gitrepositoryurl
