--- a/cicd/templates/push/triggerTemplatePush.yaml
+++ b/cicd/templates/push/triggerTemplatePush.yaml
@@ -5,11 +5,11 @@ kind: TriggerTemplate
 metadata:
   name: "{{$.Values.prefix}}-pipeline-template-push-{{- $key -}}"
   labels:
-    app.kubernetes.io/name: '{{.Values.prefix}}-webhook'
-    app.kubernetes.io/instance: '{{.Values.prefix}}-webhook-{{- template "mychart.name" . }}'
+    app.kubernetes.io/name: '{{$.Values.prefix}}-webhook'
+    app.kubernetes.io/instance: '{{$.Values.prefix}}-webhook-{{- template "mychart.name" $ }}'
     app.kubernetes.io/component: webhook
-    app.kubernetes.io/part-of: '{{.Values.prefix}}-{{- template "mychart.name" . }}'
-    backstage.io/kubernetes-id: '{{.Values.prefix}}'
+    app.kubernetes.io/part-of: '{{$.Values.prefix}}-{{- template "mychart.name" $ }}'
+    backstage.io/kubernetes-id: '{{$.Values.prefix}}'
 spec:
   params:
     - name: gitrevision
@@ -26,11 +26,11 @@ spec:
       metadata:
         generateName: {{$.Values.prefix}}-pipeline-push-{{- $key -}}-run-
         labels:
-          app.kubernetes.io/name: '{{.Values.prefix}}-webhook'
-          app.kubernetes.io/instance: '{{.Values.prefix}}-webhook-{{- template "mychart.name" . }}'
+          app.kubernetes.io/name: '{{$.Values.prefix}}-webhook'
+          app.kubernetes.io/instance: '{{$.Values.prefix}}-webhook-{{- template "mychart.name" $ }}'
           app.kubernetes.io/component: webhook
-          app.kubernetes.io/part-of: '{{.Values.prefix}}-{{- template "mychart.name" . }}'
-          backstage.io/kubernetes-id: '{{.Values.prefix}}'
+          app.kubernetes.io/part-of: '{{$.Values.prefix}}-{{- template "mychart.name" $ }}'
+          backstage.io/kubernetes-id: '{{$.Values.prefix}}'
       spec:
         pipelineRef:
           name: {{$.Values.prefix}}-pipeline-push
