--- a/catalog-info-front.yaml
+++ b/catalog-info-front.yaml
@@ -22,6 +22,7 @@ metadata:
     endoflife.date/products: nodejs@21
     backstage.io/kubernetes-namespace: portfolio
     janus-idp.io/tekton: monofolio
+    backstage.io/kubernetes-id: monofolio
 spec:
   type: website
   lifecycle: production
