--- a/catalog-info-back.yaml
+++ b/catalog-info-back.yaml
@@ -23,7 +23,7 @@ metadata:
     backstage.io/kubernetes-namespace: portfolio
     janus-idp.io/tekton: monofolio
     backstage.io/kubernetes-id: monofolio
-    argocd/app-name: portfolio, portfolio-cicd, monofolio-cicd-app
+    argocd/app-name: portfolio
 spec:
   type: service
   lifecycle: production
