--- a/catalog-info-front.yaml
+++ b/catalog-info-front.yaml
@@ -23,7 +23,7 @@ metadata:
     backstage.io/kubernetes-namespace: portfolio
     janus-idp.io/tekton: monofolio
     backstage.io/kubernetes-id: monofolio
-    argocd/app-selector: app=portfolio
+    argocd/app-selector: in app.kubernetes.io/name=portfolio
 spec:
   type: website
   lifecycle: production
