--- a/deploy/front/templates/deployment.yaml
+++ b/deploy/front/templates/deployment.yaml
@@ -17,6 +17,7 @@ spec:
     metadata:
       labels:
         app: "{{ .Chart.Name }}-{{- template "mychart.name" . -}}"
+      {{- include "mychart.labels" . | nindent 8 }}
       annotations:
 {{- include "mychart.annotations" . | nindent 8 }}
     spec:
