--- a/devfile.yaml
+++ b/devfile.yaml
@@ -7,7 +7,7 @@ metadata:
 components:
 - name: tools
   container:
-    image: harbor.weebo.fr/batleforc/che-rust:latest
+    image: ghcr.io/batleforc/weebodevimage/che-rust:main
     memoryLimit: 10Gi
     mountSources: true
     endpoints:
