--- a/deploy/back/values.yaml
+++ b/deploy/back/values.yaml
@@ -10,7 +10,7 @@ image:
   repository: ""
   pullPolicy: Always
   tag: "main"
-  pullSecret: "harbor-auth"
+  pullSecret: "harbor-pull"
 
 labels:
   app.kubernetes.io/name: "monofolio-backend"
