--- a/cicd/templates/task/export-harbor.yaml
+++ b/cicd/templates/task/export-harbor.yaml
@@ -75,9 +75,9 @@ spec:
         exit 1
       fi
 
-      body=$(echo $BODY | jq '.[] | select(.tags!=null) | select(.tags[].name == "$(params.tag)")')
+      BODY=$(echo $BODY | jq '.[] | select(.tags!=null) | select(.tags[].name == "$(params.tag)")')
 
-      echo $BODY | jq .scan_overview.["application/vnd.security.vulnerability.report; version=1.1"] | jq -rce \
+      echo $BODY | jq '.scan_overview.["application/vnd.security.vulnerability.report; version=1.1"]' | jq -rce \
         "{vulnerabilities:{
         critical: (.summary.summary.critical),
         high: (.summary.summary.high),
